[package]
name = "traveler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
blake3 = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[dependencies.xxhash-rust]
version = "0.8.6"
features = ["xxh3"]
